--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension CGI::Application::Plugin::ProtectCSRF.
 
+1.00  Thu Jan 04 21:05:00 2008
+    - fixed all
+
 0.02  Thu Nov 16 01:03:40 2006
     - fixed prerun callback _csrf_forbidden
       (When runmode set with add_postonly_runmodes is requests other than POST, 
